# uxnpi

./: .clangd  .gitignore  .gitmodules  .ignore  Makefile  README.md  circle_varvara.cpp  circle_varvara.hpp  kernel.cpp  kernel.hpp  main.cpp  ppu.cpp  ppu.hpp  rom.c  roms_img.sh  safe_shutdown.hpp  shorthand.h  uxn-fast.c  uxn.h
roms/: catclock.rom  nasu.rom  tet.rom  turye.rom
uxn-cpp/: .gitignore  CMakeLists.txt  LICENSE.md  Taskfile.yml  posix_datetime.hpp  sdl_varvara.cpp  sdl_varvara.hpp  stdlib_console.hpp  stdlib_filesystem.cpp  stdlib_filesystem.hpp  uxn.cpp  uxn.hpp  varvara.cpp  varvara.hpp
